set(PROPERTY_FOLDER "_algorithms")

# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/accumulate)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/bubble_sort)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/fibonacci)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/binary_heap)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/binary_tree)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/copy)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/find)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/for_each)
#add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/graph)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/remove)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/replace)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rotate)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/search)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/sort)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/selection_sort)
# add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/rot13)