set(PROPERTY_FOLDER "_containers")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/forward-list)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/list)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/map)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/priority-queue)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unordered-set)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/vector)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/stack)