set(PROPERTY_FOLDER "_functional")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/add)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functor-container)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functor-foreach)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functor-state)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functor-sort)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/functional)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/power)