set(PROPERTY_FOLDER "_memory")
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/auto_ptr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/deleter)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/shared_ptr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/raw_pointer)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/unique_ptr)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/weak_ptr)