set(PROPERTY_FOLDER "${PROPERTY_FOLDER}/creational")

add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/abstract_factory)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/abstract_method_classic)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/factory-method-parametrized)
add_subdirectory(${CMAKE_CURRENT_SOURCE_DIR}/singleton)